# ticket-rs

./: .gitignore  AGENTS.md  Cargo.toml  PLAN.md  README.md  SKILL.md  generate-types.sh  license.txt  test.sh  ticket.ts
src/: display.rs  graph.rs  id.rs  main.rs  storage.rs  types.rs
tests/: integration.rs
